--- a/resources/css/backTop.css
+++ b/resources/css/backTop.css
@@ -12,19 +12,19 @@
 	-webkit-box-sizing:content-box;
 }
 #backTop.white{
-     background:url("../img/css/backTop/uparr-48-b.png") no-repeat center center rgba(255,255,255,0.8);
+     background:url("images/uparr-48-b.png") no-repeat center center rgba(255,255,255,0.8);
     border:1px solid #ccc;
 }
 #backTop.black{
-     background:url("../img/css/backTop/uparr-48-w.png") no-repeat center center rgba(0,0,0,0.8); 
+     background:url("images/uparr-48-w.png") no-repeat center center rgba(0,0,0,0.8); 
     border:1px solid #ccc;
 }
 #backTop.red{
-     background:url("../img/css/backTop/uparr-48-w.png") no-repeat center center rgba(217,97,81,0.9); 
+     background:url("images/uparr-48-w.png") no-repeat center center rgba(217,97,81,0.9); 
     border:1px solid #fff;
 }
 #backTop.green{
-     background:url("../img/css/backTop/uparr-48-b.png") no-repeat center center rgba(81,217,187,0.9); 
+     background:url("images/uparr-48-b.png") no-repeat center center rgba(81,217,187,0.9); 
     border:1px solid #fff;
 }
 
