(Hopefully) Fix hand-icon jumping issue.

--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -74,58 +74,74 @@
         <!-- ==== Back to top ==== -->
         <a id="backTop"/>
         <script type="text/javascript" src="resources/js/jquery.backTop.js"/>
-        <script type="text/javascript">
-            $(document).ready( function() {
-                $('#backTop').backTop({
-                    'position' : 100,
-                    'speed' : 200,
-                    'color' : 'white',
-                });
-            });
-        </script>
         
         <!-- ==== Scroll an anchor into view if we have one ==== -->
         <script type="text/javascript">
-            $(document).ready(function () {
-                if (window.location.hash) { scrollIntoView(window.location.hash);}
-            });
-            $('a[href*="#"]').click(function(event){
-                console.log("Click on a@href=" + $(this).attr('href') + '...')
-                z = $(this).attr('href').slice($(this).attr('href').indexOf('#'))
-                console.log("z = " + z + '...')
-                if ($(z).length != 0) {
-                    console.log("Going locally to " + z + '...')
-                    scrollIntoView(z);
-                    event.preventDefault();
-                }
-            });
-            function scrollIntoView(targetId) {
-                var $offset = $(targetId).offset();
-                console.log("$('" + targetId + ").offset().top = " + $offset.top + ".")
-                goHere = $offset.top - ($(".navbar-white").offset().top + $(".navbar-white").outerHeight(true) + 15);
-                console.log("GoHere: " + goHere + ".")
-                $('html, body').animate({
-                        'scrollTop': goHere
-                      }, 800, 'swing', function () {
-                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 1000 );
-                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 1000 );
-                            });
+            $('a')
+                .filter(function() {
+//                    console.log("Click on a@href=" + $(this).attr('href') + '... (window.location.href being ' + window.location.href + '.)');
+//                    console.log((window.location.origin + window.location.pathname + window.location.search
+//                             == 
+//                             this.href.split('#')[0]
+//                            ) &amp;&amp; (this.href.indexOf('#') !== -1).toString());
+                    return  ((window.location.origin + window.location.pathname + window.location.search
+                             == 
+                             this.href.split('#')[0]
+                            ) &amp;&amp; (this.href.indexOf('#') !== -1));
+                }).click(function(event){
+//                    console.log("Click on a@href=" + $(this).attr('href') + '...')
+                    z = $(this).attr('href').slice($(this).attr('href').indexOf('#'))
+//                    console.log("anchor=" + z + '...')
+                    if ($(z).length != 0) {
+                        console.log("Going locally to " + z + '...')
+                        myScrollIntoView(z);
+                        event.preventDefault();
+                    }
+                });
+//            $('a[href*="#"]').click(function(event){
+//                console.log("Click on a@href=" + $(this).attr('href') + '...')
+//                z = $(this).attr('href').slice($(this).attr('href').indexOf('#'))
+//                console.log("anchor =" + z + '...')
+//                if ($(z).length != 0) {
+//                    console.log("Going locally to " + z + '...')
+//                    myScrollIntoView(z);
+//                    event.preventDefault();
+//                }
+//            });
+            function myScrollIntoView(targetId) {
+                $(targetId)[0].scrollIntoView(true);
+                var scrolledY = window.scrollY;
+                if(scrolledY){
+                  window.scroll(0, scrolledY - $(".navbar-fixed-top").outerHeight(true) - 50);
+                };
+                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+//                var $offset = $(targetId).offset().top;
+//                console.log("$('" + targetId + "').offset().top = " + $offset + ".")
+//                goHere = $offset - 80;
+//                console.log("Go to " + goHere + ".")
+//                $('#wrapperWork').animate({scrollTop: goHere}, 800, 'swing', function () {
+//                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+//                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+//                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+//                            });
             }
         </script>
         
         <!-- ==== Toggle diplomatic/constituated textmode ==== -->
         <script type="text/javascript" src="resources/js/sal-common.js"/>
         <script type="text/javascript">
-            $(document).ready(function() {
-                if (window.location.search.match(/mode=((orig)|(edit))/i)) { applyMode(); }
-            });
+//            $(document).ready(function() {
+//                if (window.location.search.match(/mode=((orig)|(edit))/i)) { applyMode(); }
+//            });
         </script>
 
         <!-- ==== Show GUI-Nav when scolling to top ==== -->
         <script type="text/javascript">
-            $(document).ready(function () {
-                $(".navbar-white").autoHidingNavbar().autoHidingNavbar('setShowOnBottom', false).autoHidingNavbar('setAnimationDuration', 400);
-            });
+//            $(document).ready(function () {
+//                $(".navbar-white").autoHidingNavbar().autoHidingNavbar('setShowOnBottom', false).autoHidingNavbar('setAnimationDuration', 400);
+//            });
         </script>
         
         <!-- ==== InfiniteAjaxScroll for progressive enhancement ==== -->
@@ -209,9 +225,9 @@
         
         <!-- ==== Load Paginator content when clicking on dropdown-menu ==== -->
         <script type="text/javascript">
-            $(document).ready(function() {
-                $('#dropdownMenu1').click(loadPaginatorContent);
-            });
+//            $(document).ready(function() {
+//                $('#dropdownMenu1').click(loadPaginatorContent);
+//            });
             function loadPaginatorContent() {
                 var $self = `<span data-template="app:loadWRKpagination"/>`;
                 $("#loadMeLast").innerHtml = ($self + '#later li'); 
@@ -440,30 +456,46 @@
             return ( prop &amp;&amp; prop in params ) ? params[ prop ] : params;
         };
 
+        /**
+         * JavaScript Get current Language
+         * 
+         * @return the content of the 'lang' url parameter or a string based on pathname components
+         */
+        function getLang() {
+            if (getUrlParams('lang').length &gt; 0)
+                return getUrlParams('lang')
+            else if (window.location.href.indexOf("/es/") &gt; -1) 
+                return 'es'
+            else if (window.location.href.indexOf("/de/") &gt; -1)
+                return 'de'
+            else
+                return 'en'
+        };
+
         // Build viewer popup, but don't show it yet (jquery ui config)
-        $(document).ready(function(){
-            document.getElementById('Mirador').src = "mirador.html?wid=" + getUrlParams( 'wid' );
-            $('#parent').dialog({                                      // define jquery-ui dialogue properties...
-                position:   {my: "left top", at: "left+5 bottom+40", of: "div.navbar"},
-                autoOpen:   false,
-                width:      Math.min($(window).width()* 0.45, 500),   // startsize of the dialog
-                height:     Math.min($(window).height()* 0.8, 700),
-                create:     function(event, ui) {
-                                $(event.target).parent().css('position', 'fixed');
-                            },
-                resizeStop: function(event, ui) {
-                                var position = [(Math.floor(ui.position.left) - $(window).scrollLeft()),
-                                                 (Math.floor(ui.position.top) - $(window).scrollTop())];
-                                $(event.target).parent().css('position', 'fixed');
-                                $("#parent").dialog('option','position', position);
-                             },
-                close:       function(event, ui) {
-                                params = new URLSearchParams(window.location.search) ;
-                                params.delete('viewer');
-                                window.history.replaceState(null, '', window.location.pathname + '?' + params + window.location.hash);
-                             }
-            });
-        });
+//        $(document).ready(function(){
+//            document.getElementById('Mirador').src = "mirador.html?wid=" + getUrlParams( 'wid' );
+//            $('#parent').dialog({                                      // define jquery-ui dialogue properties...
+//                position:   {my: "left top", at: "left+5 bottom+40", of: "div.navbar"},
+//                autoOpen:   false,
+//                width:      Math.min($(window).width()* 0.4, 600),   // startsize of the dialog
+//                height:     Math.min($(window).height()* 0.8, 700),
+//                create:     function(event, ui) {
+//                                $(event.target).parent().css('position', 'fixed');
+//                            },
+//                resizeStop: function(event, ui) {
+//                                var position = [(Math.floor(ui.position.left) - $(window).scrollLeft()),
+//                                                 (Math.floor(ui.position.top) - $(window).scrollTop())];
+//                                $(event.target).parent().css('position', 'fixed');
+//                                $("#parent").dialog('option','position', position);
+//                             },
+//                close:       function(event, ui) {
+//                                params = new URLSearchParams(window.location.search) ;
+//                                params.delete('viewer');
+//                                window.history.replaceState(null, '', window.location.pathname + '?' + params + window.location.hash);
+//                            }
+//            });
+//        });
 
 // Bind events - this needs mirador to be fully initialized. We achieve this by having it called from the iframe html file...
         function miradorLoaded() {
@@ -496,6 +528,8 @@
                 // Update some values of the dialog popup window
                 $("#parent small").text($(this).attr('href'));         // update Viewer Heading
                 $("#parent div").attr('title', $(this).attr('href'));  // update Viewer Title
+                $('#Mirador')[0].contentDocument.getElementById('downloadImages').href = "https://c104-131.cloud.gwdg.de/sal-facs/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
+                $('#Mirador')[0].contentDocument.getElementById('downloadImages').setAttribute('download', getUrlParams( 'wid' ) + ".zip");  // update Download button
     
                 // Open the dialog window
                 $("#parent").dialog('open');                           // show Viewer with jquery-ui Dialog method
@@ -522,6 +556,8 @@
                 // Update some values of the dialog popup window
                 $("#parent small").text($(this).attr('href'));         // update Viewer Heading
                 $("#parent div").attr('title', $(this).attr('href'));  // update Viewer Title
+                $('#Mirador')[0].contentDocument.getElementById('downloadImages').href = "https://c104-131.cloud.gwdg.de/sal-facs/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
+                $('#Mirador')[0].contentDocument.getElementById('downloadImages').setAttribute('download', getUrlParams( 'wid' ) + ".zip");  // update Download button
     
                 // Reflect viewer status in url
                 params = new URLSearchParams(window.location.search) ;
@@ -550,7 +586,6 @@
             // Bind click event for syncing/scrolling text area
             $('#Mirador').contents().find("#sync").on('click', function(){
                 $canvasId = document.getElementById('Mirador').contentWindow.MyObjects.myMirador.viewer.workspace.windows[0].canvasID
-// TODO: do something if the target is not in the current fragment...
                 var target = $("a[data-canvas='" + $canvasId +"']");
                 if (target.length) {
                     console.log('sync button has been clicked on canvasId ' + $canvasId + ', going to #' + target.attr('id'));
@@ -590,7 +625,7 @@
         <script type="text/javascript">
             $(".navbar-collapse").css({ maxHeight: $(window).height() - $(".navbar-header").height() + "px" });
         </script>
-        
+
         <!--Modal: Additional functions with cookies-->
        <!-- <div data-template="app:WRKhelp"/>
         <script type="text/javascript">
@@ -646,6 +681,55 @@
         </noscript>
 
         <!-- End Piwik Code -->
+
+        <!-- One document.ready function collecting init for all of the above... -->
+        <script type="text/javascript">
+            $(window).load( function() {
+                // move to anchor if we have one in our url
+                if (window.location.hash.length > 0) {
+                    myScrollIntoView(window.location.hash);
+                }
+            });
+            $(document).ready( function() {
+                // Init backTop
+                $('#backTop').backTop({
+                    'position' : 100,
+                    'speed' : 200,
+                    'color' : 'white',
+                });
+                // apply constituted/diplomatic mode
+                if (window.location.search.match(/mode=((orig)|(edit))/i)) {
+                    applyMode();
+                }
+                // Show GUI-Nav when scolling to top
+                $(".navbar-white").autoHidingNavbar().autoHidingNavbar('setShowOnBottom', false).autoHidingNavbar('setAnimationDuration', 400);
+                // Load Paginator
+                $('#dropdownMenu1').click(loadPaginatorContent);
+
+                // Initialize Mirador viewer
+                document.getElementById('Mirador').src = "mirador.html?wid=" + getUrlParams( 'wid' );
+                $('#parent').dialog({                                      // define jquery-ui dialogue properties...
+                    position:   {my: "left top", at: "left+5 bottom+40", of: "div.navbar"},
+                    autoOpen:   false,
+                    width:      Math.min($(window).width()* 0.4, 600),   // startsize of the dialog
+                    height:     Math.min($(window).height()* 0.8, 700),
+                    create:     function(event, ui) {
+                                    $(event.target).parent().css('position', 'fixed');
+                                },
+                    resizeStop: function(event, ui) {
+                                    var position = [(Math.floor(ui.position.left) - $(window).scrollLeft()),
+                                                     (Math.floor(ui.position.top) - $(window).scrollTop())];
+                                    $(event.target).parent().css('position', 'fixed');
+                                    $("#parent").dialog('option','position', position);
+                                 },
+                    close:       function(event, ui) {
+                                    params = new URLSearchParams(window.location.search) ;
+                                    params.delete('viewer');
+                                    window.history.replaceState(null, '', window.location.pathname + '?' + params + window.location.hash);
+                                 }
+                });
+            });
+        </script>
 
     </body>
 </html>
