Fix backTop resources paths.

--- a/templates/template_workingPapers.html
+++ b/templates/template_workingPapers.html
@@ -49,7 +49,7 @@
             <!-- ==== Core JavaScript ==== -->
             <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"/>
             <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"/>
-            <script type="text/javascript" src="resources/js/jquery.backTop.min.js"/>
+            <script type="text/javascript" src="resources/js/jquery.backTop.js"/>
             
             <!-- ==== Back to top ==== -->
             <a id="backTop"/>
