--- a/templates/template_basic.html
+++ b/templates/template_basic.html
@@ -12,8 +12,8 @@
         <!-- ==== CSS ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
-<!--    <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/> -->
-        <style>
+        <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/> 
+<!--        <style>
             /*Main stylesheet for Backtop jQuery Plugin */
             #backTop{
                 width:35px;
@@ -28,22 +28,23 @@
             	-webkit-box-sizing:content-box;
             }
             #backTop.white{
-                 background:url('resources/css/images/uparr-48-b.png') no-repeat center center rgba(255,255,255,0.8);
+                 background:url('resources/images/css/backTop/uparr-48-b.png') no-repeat center center rgba(255,255,255,0.8);
                 border:1px solid #ccc;
             }
             #backTop.black{
-                 background:url('resources/css/images/uparr-48-w.png') no-repeat center center rgba(0,0,0,0.8); 
+                 background:url('resources/images/css/backTop/uparr-48-w.png') no-repeat center center rgba(0,0,0,0.8); 
                 border:1px solid #ccc;
             }
             #backTop.red{
-                 background:url('resources/css/images/uparr-48-w.png') no-repeat center center rgba(217,97,81,0.9); 
+                 background:url('resources/images/css/backTop/uparr-48-w.png') no-repeat center center rgba(217,97,81,0.9); 
                 border:1px solid #fff;
             }
             #backTop.green{
-                 background:url('resources/css/images/uparr-48-b.png') no-repeat center center rgba(81,217,187,0.9); 
+                 background:url('resources/images/css/backTop/uparr-48-b.png') no-repeat center center rgba(81,217,187,0.9); 
                 border:1px solid #fff;
             }
         </style>
+-->
         <link rel="stylesheet" type="text/css" href="resources/css/style_default.css"/>
 
         <!-- ==== Scripts ==== -->
