Fix URL for image zip downloads.

--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -689,7 +689,7 @@
         <script type="text/javascript">
             $(window).load( function() {
                 // move to anchor if we have one in our url
-                if (window.location.hash.length > 0) {
+                if (window.location.hash.length &gt; 0) {
                     myScrollIntoView(window.location.hash);
                 }
             });
